Replace Guava's ImmutableSet.of with Java 11's Set.of
And similar Map/List constructs where noticed in edited files.

Change-Id: Ia630bb983ef34a9f1a8a1cba68588602400308fc